# license-generator

./: Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
files/: agpl-3.0.txt  apache-2.0.txt  bsd-3.0.txt  cc-by-4.0.txt  cc-by-nc-4.0.txt  cc-by-nc-sa-4.0.txt  cc-by-sa-4.0.txt  cc-zero-1.0.txt  gpl-2.0.txt  gpl-3.0.txt  isc.txt  lgpl-3.0.txt  mit.txt  mpl-2.0.txt
src/: lib.rs  license.rs  main.rs
