[package]
name = "license-generator"
description = "A Command line tool that generate `LICENSE` file."
keywords = ["license","generator", "cli"]
readme = "README.md"
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/azu/license-generator"
version = "0.1.2"
authors = ["azu <azuciao@gmail.com>"]
edition = "2018"
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE"
]
[dependencies]
license = "0.7.2"
structopt = "0.2.14"
chrono = "0.4"