[package]
name = "license-generator"
description = "A Command line tool that generate `LICENSE` file."
keywords = ["license","generator", "cli"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/azu/license-generator"
version = "1.3.0"
authors = ["azu <azuciao@gmail.com>"]
edition = "2021"
include = [
    "files/**/*",
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE"
]
[dependencies]
structopt = "0.3.26"
chrono = "0.4"
